@@ -1,2 +1,4 @@
 2015-06-15 Fred Gleason <fredg@paravelsystems.com>
 	* Initial package creation.
+2015-06-15 Fred Gleason <fredg@paravelsystems.com>
+	* Added support for $VNCVIEWER_CMD in 'rfbconnect.pl'.
